--- a/src/ROMdb/Views/MainView.fxml
+++ b/src/ROMdb/Views/MainView.fxml
@@ -63,9 +63,9 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem fx:id="menuItem_CreateBaseline" mnemonicParsing="false" text="Create New Baseline" />
-                  <MenuItem fx:id="menuItem_ChangeDataPath" mnemonicParsing="false" text="Change Database Path" />
-                  <MenuItem fx:id="menuItem_ExitProgram" mnemonicParsing="false" text="Exit" />
+                  <MenuItem fx:id="menuItem_CreateBaseline" mnemonicParsing="false" onAction="#addBaselineFromMenuBar" text="Create New Baseline" />
+                  <MenuItem fx:id="menuItem_ChangeDataPath" mnemonicParsing="false" onAction="#changeDatabasePath" text="Change Database Path" />
+                  <MenuItem fx:id="menuItem_ExitProgram" mnemonicParsing="false" onAction="#exitProgram" text="Exit" />
             </items>
           </Menu>
         </menus>
