--- a/src/ROMdb/Views/SCICRCreation.fxml
+++ b/src/ROMdb/Views/SCICRCreation.fxml
@@ -23,7 +23,7 @@
       <TextField fx:id="field_title" layoutX="103.0" layoutY="60.0" prefHeight="25.0" prefWidth="185.0" promptText="Enter Title" />
       <TextField fx:id="field_number" layoutX="103.0" layoutY="95.0" prefHeight="25.0" prefWidth="185.0" promptText="Enter Number" />
       <TextField fx:id="field_build" layoutX="103.0" layoutY="130.0" prefHeight="25.0" prefWidth="185.0" promptText="Enter Build" />
-      <ComboBox fx:id="combo_baseline" layoutX="103.0" layoutY="165.0" onAction="#initialize" prefHeight="25.0" prefWidth="185.0" promptText="Select Baseline" />
+      <ComboBox fx:id="combo_baseline" layoutX="103.0" layoutY="165.0" prefHeight="25.0" prefWidth="185.0" promptText="Select Baseline" />
       <Button fx:id="button_newBaseline" layoutX="104.0" layoutY="207.0" mnemonicParsing="false" onAction="#createNewBaseline" prefHeight="25.0" prefWidth="116.0" text="New Baseline" />
       <Button fx:id="button_save" layoutX="229.0" layoutY="207.0" mnemonicParsing="false" onAction="#saveSCICR" prefHeight="25.0" prefWidth="60.0" text="Save" />
    </children>
