Added the RequirementsEntryView.
Had to make the main window resizable so everyone could see the new ReqEntry window. I am working on making everything resizable so don't worry about things looking kind of ugly right now when things aren't fitting right.

--- a/src/ROMdb/Views/MainMenuView.fxml
+++ b/src/ROMdb/Views/MainMenuView.fxml
@@ -19,7 +19,7 @@
                   <Insets bottom="5.0" top="15.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="button_requirementsEntry" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#viewRequirementsEntry" prefHeight="27.0" prefWidth="136.0" text="Requirements Entry" visible="false">
+            <Button fx:id="button_requirementsEntry" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#viewRequirementsEntry" prefHeight="27.0" prefWidth="136.0" text="Requirements Entry">
                <VBox.margin>
                   <Insets bottom="5.0" />
                </VBox.margin>
