--- a/src/ROMdb/Views/SCICRView.fxml
+++ b/src/ROMdb/Views/SCICRView.fxml
@@ -8,7 +8,7 @@
 
 <Pane fx:id="removeRow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="625.0" style="-fx-background-color: lightgrey; -fx-border-color: grey; -fx-border-style: solid;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.SCICRController">
    <children>
-       <ComboBox fx:id="combo_ScIcrBaseline" layoutX="13.0" layoutY="11.0" onAction="#switchTableData" prefWidth="150.0" promptText="Baseline" />
+       <ComboBox fx:id="combo_ScIcrBaseline" layoutX="13.0" layoutY="11.0" prefWidth="150.0" promptText="Baseline" visible="false" />
        <Button fx:id="button_newSCICR" layoutX="444.0" layoutY="12.0" mnemonicParsing="false" onAction="#createNewSCICR" text="New SC/ICR" />
       <TableView fx:id="table_ScIcr" editable="true" layoutX="14.0" layoutY="48.0" prefHeight="456.0" prefWidth="598.0">
         <columns>
